fix(SHL-6): Align auth error text with labels

--- a/src/components/sign-in-view.module.css
+++ b/src/components/sign-in-view.module.css
@@ -17,6 +17,7 @@
 }
 
 .formControl {
+  --form-error-padding-inline: 0.25rem;
   display: flex;
   flex-direction: column;
   width: 100%;
