--- a/src/components/sign-up-view.module.css
+++ b/src/components/sign-up-view.module.css
@@ -8,6 +8,7 @@
 }
 
 .formControl {
+  --form-error-padding-inline: 0.25rem;
   display: flex;
   flex-direction: column;
   width: 100%;
